# cli_image_editor

./: CMakeLists.txt  README.md  command.cpp  command.hpp  image.cpp  image.hpp  main.cpp
